--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -1,9 +1,3 @@
-{% if mode == 'edit-template' %}
-  {% set Entity_id = templateData.id %}
-{% else %}
-  {% set Entity_id = Entity.id %}
-{% endif %}
-
 <div class='row justify-content-around mt-4'>
     <!-- STEPS -->
     <section class='col-md-6'>
@@ -11,8 +5,8 @@
       <br>
       <!-- the stepsDiv id is in its own div because otherwise if it's on the section above it doesn't work well, not sure why -->
       <div id='stepsDiv'>
-        <div class='mt-2 sortable' id='steps_div_{{ Entity_id }}' data-axis='y' data-table='{{ Entity.type ? Entity.type : 'items_types'}}_steps'>
-          {% for step in stepsArr %}
+        <div class='mt-2 sortable' id='steps_div_{{ Entity.id }}' data-axis='y' data-table='{{ Entity.type ? Entity.type : 'items_types'}}_steps'>
+          {% for step in Entity.entityData.steps %}
             <div class='input-group mb-2' id='step_{{ step.id }}'>
               <div class='input-group-prepend'>
                 <div class='input-group-text'>
@@ -30,7 +24,7 @@
               </div>
               <div class='input-group-prepend'>
                 <div class='input-group-text'>
-                  <input aria-label='{{ 'Toggle completion'|trans }}' type='checkbox' {{ mode == 'edit-template' ? 'disabled' }} {{ step.finished ? 'checked' }} data-stepid='{{ step.id }}' data-id='{{ Entity_id }}' class='stepbox'>
+                  <input aria-label='{{ 'Toggle completion'|trans }}' type='checkbox' {{ mode == 'edit-template' ? 'disabled' }} {{ step.finished ? 'checked' }} data-stepid='{{ step.id }}' data-id='{{ Entity.id }}' class='stepbox'>
                 </div>
               </div>
               <div class='pl-2 step-static form-control-plaintext'>
@@ -88,7 +82,7 @@
               <span class='input-group-text'>{{ 'Add a step'|trans }}</span>
             </div>
 
-            <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity_id }}' />
+            <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity.id }}' />
         </div>
 
     </section>
@@ -96,10 +90,10 @@
     <section class='col-md-6' id='linksDiv'>
         <i class='fas fa-fw fa-link mr-1 align-baseline'></i><h4 class='d-inline'>{{ 'Linked items'|trans }}</h4>
         <br>
-        <div class='mt-2' id='links_div_{{ Entity_id }}'>
-            {% if linksArr %}
+        <div class='mt-2' id='links_div_{{ Entity.id }}'>
+            {% if Entity.entityData.links %}
             <ul class='list-group'>
-                {% for link in linksArr %}
+                {% for link in Entity.entityData.links %}
                   <li class='list-group-item'>
                     <i class='fas fa-link mr-1'></i>
                     <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
@@ -129,7 +123,7 @@
                 <div class='input-group-prepend'>
                     <span class='input-group-text'>{{ 'Add a link'|trans }}</span>
                 </div>
-                <input aria-label='{{ 'Add a link'|trans }}' type='text' data-autocomplete='links' id='linkinput' class='form-control' data-id='{{ Entity_id }}' placeholder='{{ 'from the database'|trans }}' />
+                <input aria-label='{{ 'Add a link'|trans }}' type='text' data-autocomplete='links' id='linkinput' class='form-control' data-id='{{ Entity.id }}' placeholder='{{ 'from the database'|trans }}' />
                 <div class='input-group-append' style='max-width:33%;'>
                   <select id='addLinkCatFilter' class='brl-none form-control'>
                     <option selected value=''>{{ 'Any category'|trans }}</option>
