--- a/src/templates/steps-links-view.html
+++ b/src/templates/steps-links-view.html
@@ -1,18 +1,13 @@
-{% if Entity.type == 'experiments_templates' %}
-  {% set Entity_id = templateData.id %}
-{% else %}
-  {% set Entity_id = Entity.id %}
-{% endif %}
 <!-- STEPS -->
 <div id='stepsDiv'>
-{% if stepsArr %}
+{% if Entity.entityData.steps %}
   <div class='box'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='stepsIcon'><i id='stepsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-check-square'></i> {{ 'Steps'|trans }}</h3>
     <div class='row' id='stepsDivContent' data-save-hidden='stepsDivContent'>
-      <ul class='list-group mt-2 ml-3' id='steps_div_{{ Entity_id }}' >
-          {% for step in stepsArr %}
+      <ul class='list-group mt-2 ml-3' id='steps_div_{{ Entity.id }}' >
+          {% for step in Entity.entityData.steps %}
           <li class='list-group-item {{ step.finished ? 'finished' }}'>
-            <input aria-label='{{ 'Toggle completion'|trans }}' type='checkbox' {{ step.finished ? 'checked' }} {{ Entity.type == 'experiments_templates' ? 'disabled' }} data-id='{{ Entity.entityData.id }}' autocomplete='off' data-stepid='{{ step.id }}' class='stepbox mr-1' id='stepCheckbox_{{ step.id }}' />{{ step.body|raw }}
+            <input aria-label='{{ 'Toggle completion'|trans }}' type='checkbox' {{ step.finished ? 'checked' }} {{ Entity.type == 'experiments_templates' ? 'disabled' }} data-id='{{ Entity.id }}' autocomplete='off' data-stepid='{{ step.id }}' class='stepbox mr-1' id='stepCheckbox_{{ step.id }}' />{{ step.body|raw }}
       {% if step.finished %}
       <span class='mr-2 text-muted'>
           {{ 'completed'|trans }} <span title='{{ step.finished_time }}' class='relative-moment'></span>
@@ -32,12 +27,12 @@
 </div>
 
 <!-- LINKS -->
-{% if linksArr %}
+{% if Entity.entityData.links %}
   <div class='box'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='linkedItemsIcon'><i id='linkedItemsIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-paperclip'></i> {{ 'Linked items'|trans }}</h3>
     <div class='row' id='linkedItemsDiv' data-save-hidden='linkedItemsDiv'>
       <ul class='list-group mt-2 ml-3'>
-        {% for link in linksArr %}
+        {% for link in Entity.entityData.links %}
           <li class='list-group-item'>
             <i class='fas fa-link mr-1'></i>
             {% if link.bookable %}<i class='far fa-calendar-alt'></i>{% endif %}
