--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -219,7 +219,7 @@
 {% include 'steps-links-view.html' %}
 
 <!-- only show the json editor if there is at least one file with a .json extension -->
-{% if uploadsArr|filter(u => u.real_name|getExt == 'json') %}
+{% if Entity.entityData.uploads|filter(u => u.real_name|getExt == 'json') %}
   {% include 'json-editor.html' %}
 {% endif %}
 
@@ -227,8 +227,7 @@
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
     <div id='comment' class='box'>
       <i class='fas fa-comments mr-1 align-baseline'></i><h2 class='d-inline'>{{ 'Comments'|trans }}</h2>
-      {% if commentsArr %}
-        {% for comment in commentsArr %}
+        {% for comment in Entity.entityData.comments %}
           <div class='box'>
             <div class='comment-header p-2'>
               <span class='text-muted'>{{ comment.fullname|raw }} {{ 'commented'|trans }}</span>
@@ -243,7 +242,6 @@
             <p class='comment m-2 p-2 {{ comment.userid == Entity.Users.userData.userid ? "editable hl-hover" }}' data-id='{{ comment.id }}'>{{ comment.comment|raw }}</p>
           </div>
         {% endfor %}
-      {% endif %}
 
       <!-- CREATE COMMENT INPUT -->
       <textarea id='commentsCreateArea' class='form-control' autocomplete='off' placeholder='{{ 'Add a comment'|trans }}' aria-label='Comment area'></textarea>
