--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -27,6 +27,18 @@
                         <i class='fas fa-fw fa-image mr-1'></i>{{ 'Insert in text at cursor position'|trans }}</a>
                     {% endif %}
 
+                    <!-- INSERT IN TEXT in edit mode for plain text -->
+                    {% if ext matches '/(txt)$/i' %}
+                      <a class='dropdown-item' data-action='insert-plain-text' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}'>
+                        <i class='fas fa-fw fa-file-import mr-1'></i>{{ 'Insert in text at cursor position'|trans }}</a>
+                    {% endif %}
+
+                    <!-- Show content of plain text -->
+                    {% if ext matches '/(txt)$/i' %}
+                      <a class='dropdown-item' data-action='show-plain-text' data-storage='{{ upload.storage }}' data-path='{{ upload.long_name }}' data-name='{{ upload.real_name }}'>
+                        <i class='fas fa-fw fa-eye mr-1'></i>{{ 'Show content of file'|trans }}</a>
+                    {% endif %}
+
                     <!-- Edit filename -->
                     <a class='dropdown-item' data-action='rename-upload' data-id='{{ upload.id }}' data-type='{{ upload.type }}'
                       data-itemid='{{ upload.item_id }}' data-msg='{{ 'Edit filename'|trans }}' title='{{ 'Edit filename'|trans }}'>
