--- a/src/templates/revisions.html
+++ b/src/templates/revisions.html
@@ -12,7 +12,11 @@
 {% for revision in revisionsArr %}
   <div class='box'>
     <span class='relative-moment' title='{{ revision.savedate }}'></span> {{ 'by'|trans }} {{ revision.fullname|raw }} {% if not Entity.entityData.locked %}<a href='app/controllers/RevisionsController.php?item_id={{ Entity.id }}&type={{ Entity.type }}&action=restore&rev_id={{ revision.id }}'>{{ 'Restore'|trans }}</a>{% endif %}<br>
-    {{ revision.body|md2html|raw }}
+    {% set body = revision.body %}
+    {% if revision.content_type == constant('Elabftw\\Models\\AbstractEntity::CONTENT_MD') %}
+      {% set body = revision.body|md2html %}
+    {% endif %}
+    {{ body|raw }}
   </div>
 {% endfor %}
 
