--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -190,9 +190,12 @@
   <!--  BODY (show only if not empty) -->
   {% set body = Entity.entityData.body %}
   {% if body != '' %}
+    {% if Entity.entityData.content_type == constant('Elabftw\\Models\\AbstractEntity::CONTENT_MD') %}
       {% set body = Entity.entityData.body|md2html %}
-      <!-- Workaround for bug #532; long tables result in empty body returned from md2html:
-          If body is empty, reload and don't parse as markdown -->
+    {% endif %}
+    {# Workaround for bug #532; long tables result in empty body returned from md2html:
+    If body is empty, reload and don't parse as markdown
+    2022-06-07 note: could probably be removed now that we have content_type #}
       {% if body|trim == '' %}
           {% set body = Entity.entityData.body %}
       {% endif %}
