--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -229,7 +229,7 @@
 <section id='commentsDiv'>
   {% if App.Session.get('is_auth') and not App.Session.has('is_anon') %}
     <div id='comment' class='box'>
-      <i class='fas fa-comments mr-1 align-baseline'></i><h2 class='d-inline'>{{ 'Comments'|trans }}</h2>
+      <h3><i class='fas fa-comments'></i> {{ 'Comments'|trans }}</h3>
         {% for comment in Entity.entityData.comments %}
           <div class='box'>
             <div class='comment-header p-2'>
