--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -1,8 +1,14 @@
-<div class='row justify-content-around mt-4'>
+<div class='row mt-4'>
     <!-- STEPS -->
     <section class='col-md-6'>
       <h4><i class='fas fa-fw fa-check-square'></i> {{ 'Steps'|trans }}</h4>
-      <!-- the stepsDiv id is in its own div because otherwise if it's on the section above it doesn't work well, not sure why -->
+      <!-- ADD STEP -->
+      <div class='input-group mb-3'>
+          <div class='input-group-prepend'>
+            <span class='input-group-text'>{{ 'Add a step'|trans }}</span>
+          </div>
+          <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity.id }}' />
+      </div>
       <div id='stepsDiv'>
         <div class='sortable' id='steps_div_{{ Entity.id }}' data-axis='y' data-table='{{ Entity.type ? Entity.type : 'items_types'}}_steps'>
           {% for step in Entity.entityData.steps %}
@@ -74,50 +80,13 @@
           {% endfor %}
         </div>
       </div>
-
-        <!-- ADD STEP -->
-        <div class='input-group mb-3'>
-            <div class='input-group-prepend'>
-              <span class='input-group-text'>{{ 'Add a step'|trans }}</span>
-            </div>
-
-            <input aria-label='{{ 'Add a step'|trans }}' type='text' size='60' class='form-control stepinput' data-id='{{ Entity.id }}' />
-        </div>
-
     </section>
     <!-- LINKS -->
-    <section class='col-md-6' id='linksDiv'>
+    <section class='col-md-6'>
         <h4><i class='fas fa-fw fa-link'></i> {{ 'Linked items'|trans }}</h4>
-        <div id='links_div_{{ Entity.id }}'>
-            {% if Entity.entityData.links %}
-            <ul class='list-group'>
-                {% for link in Entity.entityData.links %}
-                  <li class='list-group-item'>
-                    <i class='fas fa-link mr-1'></i>
-                    <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
-                  {{ link.title|raw }}</a>
-                  <div class='float-right'>
-                    {% if mode != 'edit-template' %}
-                      <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
-                        <i class='fas fa-arrows-down-to-line'></i>
-                      </a>
-
-                      <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
-                        <i class='fas fa-lg fa-file-import'></i>
-                      </a>
-                    {% endif %}
-                    <a data-action='destroy-link' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}'>
-                      <i class='fas fa-lg fa-trash-alt'></i>
-                    </a>
-                  </div>
-                </li>
-                {% endfor %}
-            </ul>
-            {% endif %}
-        </div>
         <!-- ADD LINK -->
-        <div class='mt-2'>
-            <div class='input-group mb-3'>
+        <div class='mb-3'>
+            <div class='input-group'>
                 <div class='input-group-prepend'>
                     <span class='input-group-text'>{{ 'Add a link'|trans }}</span>
                 </div>
@@ -131,6 +100,35 @@
                   </select>
                 </div>
             </div>
+        </div>
+        <div id='linksDiv'>
+          <div id='links_div_{{ Entity.id }}'>
+              {% if Entity.entityData.links %}
+              <ul class='list-group'>
+                  {% for link in Entity.entityData.links %}
+                  <li class='list-group-item'>
+                    <div class='float-right'>
+                      {% if mode != 'edit-template' %}
+                        <a data-action='import-links' data-target='{{ link.itemid }}' title='{{ 'Import links'|trans }}'>
+                          <i class='fas fa-arrows-down-to-line'></i>
+                        </a>
+
+                        <a data-action='import-link-body' data-target='{{ link.itemid }}' title='{{ 'Import'|trans }}'>
+                          <i class='fas fa-lg fa-file-import'></i>
+                        </a>
+                      {% endif %}
+                      <a data-action='destroy-link' data-target='{{ link.itemid }}' title='{{ 'Delete'|trans }}'>
+                        <i class='fas fa-lg fa-trash-alt'></i>
+                      </a>
+                    </div>
+                    <i class='fas fa-link mr-1'></i>
+                    <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
+                    {{ link.title|raw }}</a>
+                  </li>
+                  {% endfor %}
+              </ul>
+              {% endif %}
+          </div>
         </div>
     </section>
 </div>
