fix margin after heading

--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -121,7 +121,7 @@
                         <i class='fas fa-lg fa-trash-alt'></i>
                       </a>
                     </div>
-                    <i class='fas fa-link mr-1'></i>
+                    <i class='fas fa-link'></i>
                     <span class='item-category' style='color:#{{ link.color|raw }}'>{{ link.name|raw }}</span> - <a href='database.php?mode=view&id={{ link.itemid }}'>
                     {{ link.title|raw }}</a>
                   </li>
