--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -205,7 +205,7 @@
 
 <!-- UPLOAD FORM -->
 <section class='box'>
-  <h3><i class='fas fa-fw fa-paperclip align-baseline'></i> {{ 'Attach a file'|trans }}</h3>
+  <h3><i class='fas fa-fw fa-paperclip'></i> {{ 'Attach a file'|trans }}</h3>
   <form action='app/controllers/EntityAjaxController.php' class='dropzone' id='elabftw-dropzone'></form>
 </section>
 
