remove unnecessary div

--- a/src/templates/steps-links-edit.html
+++ b/src/templates/steps-links-edit.html
@@ -85,20 +85,18 @@
     <section class='col-md-6'>
         <h4 data-action='toggle-next' data-toggle-next-n='2' data-icon='linksDivIcon'><i id='linksDivIcon' class='fas fa-chevron-circle-down'></i> <i class='fas fa-fw fa-link'></i> {{ 'Linked items'|trans }}</h4>
         <!-- ADD LINK -->
-        <div class='mb-3'>
-            <div class='input-group'>
-                <div class='input-group-prepend'>
-                    <span class='input-group-text'>{{ 'Add a link'|trans }}</span>
-                </div>
-                <input aria-label='{{ 'Add a link'|trans }}' type='text' data-autocomplete='links' id='linkinput' class='form-control' data-id='{{ Entity.id }}' placeholder='{{ 'from the database'|trans }}' />
-                <div class='input-group-append' style='max-width:33%;'>
-                  <select id='addLinkCatFilter' class='brl-none form-control'>
-                    <option selected value=''>{{ 'Any category'|trans }}</option>
-                    {% for cat in itemsCategoryArr %}
-                      <option value='{{ cat.category_id }}'>{{ cat.category }}</option>
-                    {% endfor %}
-                  </select>
-                </div>
+        <div class='input-group mb-3'>
+            <div class='input-group-prepend'>
+                <span class='input-group-text'>{{ 'Add a link'|trans }}</span>
+            </div>
+            <input aria-label='{{ 'Add a link'|trans }}' type='text' data-autocomplete='links' id='linkinput' class='form-control' data-id='{{ Entity.id }}' placeholder='{{ 'from the database'|trans }}' />
+            <div class='input-group-append' style='max-width:33%;'>
+              <select id='addLinkCatFilter' class='brl-none form-control'>
+                <option selected value=''>{{ 'Any category'|trans }}</option>
+                {% for cat in itemsCategoryArr %}
+                  <option value='{{ cat.category_id }}'>{{ cat.category }}</option>
+                {% endfor %}
+              </select>
             </div>
         </div>
         <div id='linksDiv'>
