fix todoSteps id attributes

--- a/src/templates/todolist-panel.html
+++ b/src/templates/todolist-panel.html
@@ -41,14 +41,14 @@
   <div class='d-inline-block mx-2 mt-2 w-100'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todoStepsExperimentIcon'><i id='todoStepsExperimentIcon' class='fas fa-chevron-circle-down'></i> {% trans %}Experiment{% plural 2 %}Experiments{% endtrans %}</h3>
     <!-- id is needed to fill it -->
-    <ul id='todoStepsExperiment' class='mt-2' data-save-hidden='todoStepsExperiment'></ul>
+    <ul id='todoStepsExperiments' class='mt-2' data-save-hidden='todoStepsExperiment'></ul>
   </div>
 
   <div class='clear'></div>
   <div class='d-inline-block mx-2 mt-2 w-100'>
     <h3 title='{{ 'Toggle visibility'|trans }}' data-action='toggle-next' data-icon='todoStepsItemIcon'><i id='todoStepsItemIcon' class='fas fa-chevron-circle-down'></i> {{ 'Items'|trans }}</h3>
     <!-- id is needed to fill it -->
-    <ul id='todoStepsItem' class='mt-2' data-save-hidden='todoStepsItem'></ul>
+    <ul id='todoStepsItems' class='mt-2' data-save-hidden='todoStepsItem'></ul>
   </div>
 </div>
 
