--- a/src/templates/show-view-edit.html
+++ b/src/templates/show-view-edit.html
@@ -17,3 +17,63 @@
   </div>
 </div>
 <!-- end modal -->
+
+<!-- Modal for import -->
+<div class='modal fade' id='importModal' tabindex='-1' role='dialog' aria-labelledby='importModalLabel' aria-hidden='true'>
+  <div class='modal-dialog' role='document'>
+    <div class='modal-content'>
+      <div class='modal-header'>
+        <h5 class='modal-title' id='importModalLabel'>{{ 'Import from archive'|trans }}</h5>
+        <button type='button' class='close' data-dismiss='modal' aria-label='Close'>
+          <span aria-hidden='true'>&times;</span>
+        </button>
+      </div>
+      <div class='modal-body'>
+        <form class='form-group' enctype='multipart/form-data' action='app/controllers/ImportController.php' method='post'>
+          <label for='target_zip'>{{ '1. Select where to import:'|trans }}</label>
+          <select class='form-control col-md-4' id='target_zip' autocomplete='off' name='target'>
+            <option selected disabled>-------</option>
+            <option disabled>{{ 'Import in database'|trans }}</option>
+            {% for itemsType in itemsCategoryArr %}
+              <option value='{{ itemsType.category_id }}'>{{ itemsType.category }}</option>
+            {% endfor %}
+            <option disabled>{{ 'Import in experiments'|trans }}</option>
+            {% for user in allTeamUsersArr %}
+              <option value='{{ user.userid }}'>{{ user.fullname|raw }}</option>
+            {% endfor %}
+          </select>
+
+          <label for='visibility_zip'>{{ '2. Select a visibility:'|trans }}</label>
+          <select class='form-control col-md-4' id='visibility_zip' autocomplete='off' name='canread'>
+            {% for key, value in visibilityArr %}
+              <option value='{{ key }}'
+              {{ 'team' == key ? ' selected' }}
+              >{{ value|trans }}</option>
+              {% endfor %}
+          </select>
+
+          <label for='canwrite_zip'>{{ '2b. Select write access:'|trans }}</label>
+          <select class='form-control col-md-4' id='canwrite_zip' autocomplete='off' name='canwrite'>
+            {% for key, value in visibilityArr %}
+              <option value='{{ key }}'
+              {{ 'team' == key ? ' selected' }}
+              >{{ value|trans }}</option>
+            {% endfor %}
+          </select>
+
+          {{ App.Session.get('csrf')|csrf }}
+          <label class='d-block' for='archiveuploader'>{{ '3. Select a file to import:'|trans }}</label>
+          <input id='archiveuploader' name='file' type='file' accept='.zip,.eln' />
+          <input name='type' type='hidden' value='archive' />
+          <span class='smallgray'>{{ 'Allowed extensions: .eln, .zip'|trans }}</span>
+
+          <div class='mt-4 text-center'>
+            <button type='submit' class='button btn btn-primary'>{{ 'Import'|trans }}</button>
+          </div>
+
+        </form>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- end modal -->
