--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -111,9 +111,11 @@
                 {% set thumb_name = upload.long_name ~ '_th.jpg' %}
                 {# old timestamp pdf don't have a thumbnail, so don't try to display one for them #}
                 {% if App.Users.userData.uploads_layout %}
-                  <img class='thumb img-thumbnail rounded' class='text-break' src='app/download.php?f={{ thumb_name }}&storage={{ upload.storage }}' alt='thumbnail' />
-                {% else %}
-                  <i class='fas {{ ext2icon(ext) }} thumb rounded mx-auto d-block text-center'></i>
+                  {% if ext matches '/(jpg|jpeg|png|gif|tif|tiff|pdf|eps|svg|heic)$/i' %}
+                    <img class='thumb img-thumbnail rounded' class='text-break' src='app/download.php?f={{ thumb_name }}&storage={{ upload.storage }}' alt='thumbnail' />
+                  {% else %}
+                    <i class='fas {{ ext2icon(ext) }} thumb rounded mx-auto d-block text-center'></i>
+                  {% endif %}
                 {% endif %}
                 {% if upload.real_name matches '/\.(jpg|jpeg|png|gif|pdf|eps|svg|heic)$/i' %}
                     </a>
