--- a/src/templates/uploads.html
+++ b/src/templates/uploads.html
@@ -211,6 +211,17 @@
           </div>
         {% endif %}
 
+        {% if ext matches '/txt$/i' %}
+          <div class='clickable'>
+            <i class='fas fa-fw fa-eye mr-1'></i>
+            <p data-action='show-plain-text'
+               data-storage='{{ upload.storage }}'
+               data-path='{{ upload.long_name }}'
+               data-name='{{ upload.real_name }}'
+               class='d-inline'>{{ 'Show content of file'|trans }}</p>
+          </div>
+        {% endif %}
+
         <div id='moreInfo_{{ upload.id }}' class='d-none'>
           <i class='fas fa-fw fa-hdd mr-1'></i>
           <p class='d-inline'>{{ 'Storage:'|trans }} {% if upload.storage == '1' %} {{ 'Local filesystem'|trans }} {% endif %} {% if upload.storage == '2' %} S3 bucket {% endif %}</p><br>
