View/Insert uploaded text files (.txt) content (#3626)
* plain text files
* show content
* add content to body

* move modal to uploads.html

* add showContentPlainText function to misc.ts
use this function in view and edit mode to display the content of a plain txt file

* use special icon, show modal on icon click

* indentation, use twig comments

* show icon instead of thumbnail based on user setting

* align file icons to center + set icon height to 100 px
This is necessary after the switch from JS+SVG to CSS

* reverse commit 27e2070f5
keep text-center

* jslint

* add link with the eye icon

* add eye overlay on hover of the icon

Co-authored-by: Nicolas CARPi <nico-git@deltablot.email>

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -804,7 +804,7 @@ the form-control fails to do that so we do the border ourselves */
 }
 
 .thumb {
-    font-size: 5em !important;
+    font-size: 100px !important;
     height: 100px;
     min-height: 50px;
     min-width: 50px;
@@ -1049,6 +1049,29 @@ the form-control fails to do that so we do the border ourselves */
     .ve-propertiesPanel .bp3-tab-list { /* stylelint-disable-line */
         overflow: auto !important;
     }
+}
+
+/* eye overlay for uploaded file icons */
+
+.eye-overlay {
+    display: block;
+    position: relative;
+}
+
+.eye-overlay:hover::after {
+    background-color: $maingray;
+    color: $white;
+    content: '\f06e';
+    display: block;
+    font-family: 'Font Awesome 6 Free';
+    font-size: 3em;
+    font-weight: 900;
+    left: 50%;
+    margin-left: -33px; // half width
+    position: absolute;
+    text-align: center;
+    top: 37px;
+    width: 66px;
 }
 
 /* fix for 3Dmoljs uploaded files */
