--- a/src/templates/edit.html
+++ b/src/templates/edit.html
@@ -205,8 +205,8 @@
 
 <!-- UPLOAD FORM -->
 <section class='box'>
-  <i class='fas fa-fw fa-paperclip mr-1 align-baseline'></i><h3 class='d-inline'>{{ 'Attach a file'|trans }}</h3>
-  <form action='app/controllers/EntityAjaxController.php' class='dropzone' id='elabftw-dropzone'></form>
+  <h3 class='d-inline'><i class='fas fa-fw fa-paperclip'></i> {{ 'Attach a file'|trans }}</h3>
+  <form action='app/controllers/EntityAjaxController.php' class='dropzone mt-2' id='elabftw-dropzone'></form>
 </section>
 
 {% include 'uploads.html' %}
