rename lastchange to modified_at and make it non nullable

--- a/src/templates/view.html
+++ b/src/templates/view.html
@@ -207,7 +207,7 @@
   <div class='row'>
     <div class='col-6'>
       <!-- SHOW LAST MOD -->
-      <p>{{ 'Last modified on %s'|trans|format(Entity.entityData.lastchange) }}</p>
+      <p>{{ 'Last modified on %s'|trans|format(Entity.entityData.modified_at) }}</p>
     </div>
     <div class='col-6'>
       <!-- eLabID -->
