make template import work

--- a/src/templates/create-new.html
+++ b/src/templates/create-new.html
@@ -37,7 +37,7 @@
             {% endfor %}
             <div class='dropdown-divider'></div>
             <div class='dropdown-item' data-action='import-eln'>
-              <i class='fas fa-upload'></i> {{ 'Import'|trans }}
+              <i class='fas fa-upload'></i> {{ 'Import from file'|trans }}
             </div>
 
           {% endif %}
