--- a/src/templates/show-templates-edit.html
+++ b/src/templates/show-templates-edit.html
@@ -1,7 +1,7 @@
 <div class='box' style='min-height: 600px;'>
   <div class='row'>
     <div class='col'>
-      <h3>{{ 'Experiments Templates'|trans }}</h3>
+      <h3><i class='fas fa-layer-group'></i> {{ 'Experiments Templates'|trans }}</h3>
     </div>
     <!-- CREATE NEW AND IMPORT BUTTONS -->
     <div class='col text-right'>
@@ -11,7 +11,7 @@
             <span class='sr-only'>{{ 'Toggle create new menu'|trans }}</span>
           </button>
           <div class='dropdown-menu' aria-labelledby='btnGroupDrop1'>
-            <a id='import-from-file' class='dropdown-item'><i class='fas fa-upload fa-fw'></i> {{ 'Import from file'|trans }}</a>
+            <div data-action='show-import-tpl' class='dropdown-item'><i class='fas fa-upload fa-fw'></i> {{ 'Import from file'|trans }}</div>
             <!-- disable the reordering for now
             <div class='dropdown-divider'></div>
             <a id='toggleReorder' class='dropdown-item'><i class='fas fa-sort fa-fw' data-fa-transform='rotate-90 down-1'></i> {{ 'Reorder templates'|trans }}</a>
@@ -20,7 +20,7 @@
         </div>
         <button type='button' class='btn btn-primary' data-action='create-template'>{{ 'Create'|trans }}</button>
       </div>
-      <input type='file' aria-hidden='true' hidden accept='.tpl' id='import_tpl' class='form-control mt-1'>
+      <input type='file' aria-hidden='true' hidden accept='.eln' id='import_tpl' class='form-control mt-1'>
     </div>
   </div>
   <hr>
